[FIX] fix styles and modified project

--- a/src/client/styles/styles.scss
+++ b/src/client/styles/styles.scss
@@ -51,6 +51,9 @@ body {
 .title {
   text-align: center;
   font-weight: 500;
+  padding-bottom: 15px;
+  border-bottom: 1px solid #d3d2d2;
+  margin-bottom: 20px;
 }
 
 .footer {
